# sane-fmt

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .travis.yml  Cargo.toml  Makefile  README.md  TODO.md  clippy.sh  compile-typescript.sh  export-json-config.sh  fmt.sh  generate-shell-completions.sh  reproduce.sh  run.sh  test.sh  valid-typescript-file.ts
.dependabot/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yaml  clippy.yaml  deploy.yaml  deploy.yml  miri.yaml  release.yml  test.yaml
assets/: PKGBUILD
ci/: install-pnpm.sh
ci/github-actions/: create-checksums.sh  expose-release-artifacts.sh  generate-pkgbuild.py3  package-info.py3  package.json  pnpm-lock.yaml  publish-github-action.js  publish-npm-package.py3  release-type.js  release-type.py3  release-type.sh
ci/github-actions/lib/: utils.js
exports/: completion.bash  completion.elv  completion.fish  completion.ps1  completion.zsh  sane-fmt-typescript.json  sane-fmt.dprint.json  sane-fmt.dprintrc.json  sane-fmt.typescript.json
nodejs/wasm32-wasi/: .npmignore  README.md  bin  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
nodejs/wasm32-wasi/src/: index.ts  main.ts
nodejs/x86_64-apple-darwin/: README.md  package.json
nodejs/x86_64-pc-windows-gnu/: README.md  package.json
nodejs/x86_64-pc-windows-msvc/: README.md  package.json
nodejs/x86_64-unknown-linux-gnu/: README.md  package.json
nodejs/x86_64-unknown-linux-musl/: README.md  package.json
preview/: preview.ts
scripts/: package.json  pnpm-lock.yaml  sync-package-versions.js  sync-readme-files.js
scripts/lib/: run.js
src/: act.rs  app.rs  cli_opt.rs  cross_platform_path.rs  diff.rs  export_json_config.rs  generate_shell_completions.rs  json.rs  lib.rs  main.rs  pretty_error_message.rs  rules.rs
src/act/: alias.rs  log_diff.rs  log_find.rs  log_passed.rs  log_same.rs  log_scan.rs  log_skip.rs  log_unformatted.rs  may_clear_current_line.rs  may_write.rs  mod.rs
src/app/: default.rs  mod.rs  run.rs
src/cli_opt/: cross_platform_path.rs  detail_level.rs  input_stream_address.rs  log_format.rs  mod.rs  ternary.rs  when.rs
src/cross_platform_path/: mod.rs
src/diff/: mod.rs
src/dp_cfg/: mod.rs
src/export_json/: app.rs  main.rs
src/export_json/cli_opt/: mod.rs  output_kind.rs
src/export_json_config/: app.rs  cfg.rs  cli_opt.rs  main.rs
src/export_json_config/cfg/: mod.rs  schema_url.rs  typescript.rs
src/export_json_config/cli_opt/: mod.rs  output_kind.rs
src/file_list/: create_list.rs  default_list.rs  mod.rs  read_dir.rs  read_list.rs
src/generate_shell_completions/: app.rs  cli_opt.rs  main.rs  mod.rs
src/rules/: cfg.rs  fmt.rs  mod.rs
src/term/: color.rs  mod.rs
template/sane-fmt/: PKGBUILD
template/sane-fmt-bin/: PKGBUILD
tests/: check.rs  color.rs  flags.rs  fs_errors.rs  github_actions.rs  github_actions_legacy.rs  glob.rs  include.rs  integration.rs  issue_66.rs  json_config_sync.rs  mod.rs  nodejs.rs  package_manifests.rs  path_separator.rs  readme_sync.rs  rules.rs  shell_completion_sync.rs  stdio.rs  utils.rs  write.rs
tests/assets/: include-dirs.input.txt  include-files.input.txt  include-mixed.file.txt  include-mixed.stdin.txt
tests/expected-output/: abc-only.stderr.txt  abc-only.stdout.txt  all-passed.stdout.txt  colored-and-skipped.stdout.txt  colored.stdout.txt  correct-directory-only.stdout.txt  correct-only.stdout.txt  details-diff.stdout.txt  details-name.stdout.txt  help.stdout.txt  hide-skipped-details-diff.stdout.txt  hide-skipped-details-name.stdout.txt  include-files.stdout.txt  include-mixed.stdout.txt  show-skipped-details-diff.stdout.txt  show-skipped-details-name.stdout.txt  some-are-skipped.stdout.txt  some-correct-files-only.stdout.txt  stderr.txt  unknown-flag.stdout.txt  write-all-passed.stdout.txt
tests/expected-output/github-actions/: colored.stderr.txt  details-count.stdout.txt  details-diff-legacy.stdout.txt  details-diff.stdout.txt  details-name.stdout.txt  github-output.txt  github-step-summary.md
tests/expected-output/github-actions-legacy/: details-diff.stdout.txt
(+8 files in other folders)
