[package]
name = "sane-fmt"
description = "Opinionated code formatter for TypeScript and JavaScript"
version = "0.16.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
license = "MIT"
edition = "2021"
keywords = ["format", "typescript", "javascript"]
categories = ["command-line-utilities"]
repository = "https://github.com/sane-fmt/sane-fmt.git"
readme = "README.md"
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
]

[lib]
name = "sane_fmt"
path = "src/lib.rs"
doc = true

[[bin]]
name = "sane-fmt"
path = "src/main.rs"
doc = false

[[bin]]
name = "sane-fmt-export-json-config"
path = "src/export_json_config/main.rs"
doc = false

[[bin]]
name = "sane-fmt-generate-shell-completions"
path = "src/generate_shell_completions/main.rs"
doc = false

[dependencies]
dprint-core = "^0.59.0"
dprint-plugin-typescript = "^0.74.0"
difference = "^2.0.0"
relative-path = "^1.7.2"
ansi_term = "^0.12.1"
pipe-trait = "^0.4.0"
tap = "^1.0.1"
serde_json = "^1.0.86"
clap-utilities = "^0.2.0"

[dependencies.serde]
version = "^1.0.145"
features = ["derive"]

[dependencies.clap]
version = "^4.0.13"
features = ["derive"]

[dev-dependencies]
tempfile = "^3.3.0"
strip-ansi-escapes = "^0.1.1"
fs_extra = "^1.2.0"
toml = "^0.5.9"
pretty_assertions = "^1.3.0"
text-block-macros = "0.1.1"

[profile.release]
opt-level = "z"
